tests-integration/tests/snapshots/test__git_ignore__check_after.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "outcome": "clean",
      "path": "tracked_ignored.rs"
    }
  ]
}
