tests-integration/tests/snapshots/test__git_ignore__check_before.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "tracked_ignored.rs",
      "status": "missing"
    }
  ]
}
