tests-integration/tests/snapshots/test__git_ignore__format.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": true,
      "path": "tracked_ignored.rs",
      "status": "missing"
    }
  ]
}
