tests-integration/tests/snapshots/test__git_ignore__tree_before.snap
---
source: tests-integration/tests/test.rs
expression: tree_snapshot(root)
---
=== .gitignore ===
tracked_ignored.rs␊
untracked_ignored.rs␊
=== excluded.rs ===
fn excluded() {}␊
=== global_ignored.rs ===
fn ignored_by_configured_global_excludes() {}␊
=== info_ignored.rs ===
fn ignored_by_info_exclude() {}␊
=== licenserc.toml ===
[header]␊
text = "Copyright 2026 Acme Labs"␊
␊
[files]␊
excludes = ["excluded.rs"]␊
includes = ["**/*.rs"]␊
=== tracked_ignored.rs ===
fn tracked() {}␊
=== untracked_ignored.rs ===
fn untracked() {}␊
